# backend/event/models/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.28.0
+//   sqlc v1.29.0
 
 package models
 
@@ -11,8 +11,10 @@ import (
 type AccountingPoint struct {
 	ID                 int
 	BusinessID         string
-	MeteringGridAreaID string
-	SystemOperatorID   string
+	MeteringGridAreaID int
+	SystemOperatorID   int
+	RecordedBy         int
+	RecordedAt         pgtype.Timestamptz
 }
 
 type AccountingPointEndUser struct {
@@ -132,6 +134,18 @@ type Identity struct {
 	EntityName string
 	PartyID    *int
 	PartyName  *string
+}
+
+type MeteringGridArea struct {
+	ID               int
+	BusinessID       string
+	Name             string
+	PriceArea        string
+	SystemOperatorID int
+	ValidFrom        pgtype.Timestamptz
+	ValidTo          pgtype.Timestamptz
+	RecordedBy       int
+	RecordedAt       pgtype.Timestamptz
 }
 
 type Notice struct {
