# openapi/resources.yml
@@ -922,6 +922,7 @@ resources:
       - read
       - list
     generate_views: true
+    audit: true
     properties:
       id:
         description: Unique surrogate identifier.
@@ -934,23 +935,96 @@ resources:
           The GSRN metering point id of the accounting point.
         format: text
         type: string
+        readOnly: true
         pattern: '^[1-9][0-9]{17}$'
         example: '709000000000000057'
       metering_grid_area_id:
         description: >-
-          The metering grid area EIC-X id of the accounting point.
-        format: text
-        type: string
-        pattern: '^[0-9]{2}X[0-9A-Z-]{12}[0-9A-Z]$'
-        example: '78X-TEST-123456K'
+          The ID of the metering grid area that the accounting point belongs to.
+        format: bigint
+        type: integer
+        readOnly: true
+        example: 34
+        x-foreign-key:
+          resource: metering_grid_area
+          field: id
       system_operator_id:
         description: >-
-          The system operator of the accounting point
-        format: text
-        type: string
+          The system operator of the accounting point.
+        format: bigint
+        type: integer
+        readOnly: true
         x-foreign-key:
           resource: party
           field: id
+
+  - id: metering_grid_area
+    acronym: MGA
+    summary: Metering Grid Area
+    description: Metering grid area owned by a system operator.
+    operations:
+      - read
+      - list
+    generate_views: true
+    audit: true
+    properties:
+      id:
+        description: Unique surrogate identifier.
+        format: bigint
+        type: integer
+        readOnly: true
+        example: 89
+      business_id:
+        description: >-
+          The EIC-X ID of the metering grid area.
+        format: text
+        type: string
+        readOnly: true
+        pattern: '^[0-9]{2}X[0-9A-Z-]{12}[0-9A-Z]$'
+        example: '78X-TEST-123456K'
+      name:
+        description: The name of the metering grid area.
+        format: text
+        type: string
+        readOnly: true
+        example: KL3 N4
+      price_area:
+        description: The price area the MGA belongs to.
+        format: text
+        type: string
+        readOnly: true
+        enum:
+          - NO1
+          - NO2
+          - NO3
+          - NO4
+          - NO5
+        example: NO2
+      system_operator_id:
+        description: >-
+          The system operator that owns the metering grid area.
+        format: bigint
+        type: integer
+        readOnly: true
+        x-foreign-key:
+          resource: party
+          field: id
+      valid_from:
+        description: >-
+          The date from which the metering grid area is valid.
+          Midnight aligned on Norwegian timezone.
+        format: timestamp with time zone
+        type: string
+        nullable: true
+        example: 2022-08-08 00:00:00 CET
+      valid_to:
+        description: >-
+          The date until which the metering grid area is valid.
+          Midnight aligned on Norwegian timezone.
+        format: timestamp with time zone
+        type: string
+        nullable: true
+        example: 2022-09-10 00:00:00 CET
 
   - id: product_type
     acronym: PT
